@@ -82,3 +82,5 @@ test.*
 docs/*
 utils/*
 conda/README.md
+*.local
+*.b250
