@@ -23,6 +23,7 @@ unzip:
     3) Re-create genotype data by looking up words in the dictionaries
 */
 
+#include <errno.h>
 #include "genozip.h"
 #include "profiler.h"
 #include "sections.h"
@@ -1015,31 +1016,18 @@ void mtf_destroy_context (Context *ctx)
     mutex_destroy (ctx->mutex);
 }
 
-static FILE *dump_file; // used by --dump-one-b250 and --dump-one-local
-MUTEX (dump_mutex);
-
-void mtf_initialize_binary_dump (const char *field, DictId *dict_id, const char *filename_ext)
+void mtf_dump_binary (VBlockP vb, ContextP ctx, bool local /* true = local, false = b250 */)
 {
-    *dict_id = dict_id_make (field, strlen (field)); 
+    char dump_fn[50];
+    sprintf (dump_fn, "%s.%05u.%s", ctx->name, vb->vblock_i, local ? "local" : "b250");
     
-    char dump_fn[strlen(field) + strlen (filename_ext) + 2];
-    sprintf (dump_fn, "%s.%s", field, filename_ext);
-    
-    dump_file = fopen (dump_fn, "wb"); // it will be closed implicitly when the process terminates
-
-    fprintf (stderr, "Writing %s data to %s\n", field, dump_fn);
-
-    mutex_initialize (dump_mutex);
-}
-
-void mtf_dump_local (ContextP ctx, bool local /* true = local, false = b250 */)
-{
-    mutex_lock (dump_mutex);
+    FILE *dump_file = fopen (dump_fn, "wb"); // it will be closed implicitly when the process terminates
+    RETURNW (dump_file,, "Warning: mtf_dump_binary failed to open for writing %s: %s", dump_fn, strerror (errno));
 
     if (local)
         fwrite (ctx->local.data, 1, ctx->local.len * lt_desc[ctx->ltype].width, dump_file);
     else
         fwrite (ctx->b250.data, 1, ctx->b250.len, dump_file);
 
-    mutex_unlock (dump_mutex);
+    fclose (dump_file);
 }
