@@ -213,3 +213,4 @@ Note: some versions numbers are skipped due to failed conda builds (every build 
 
 8.0.4
 - 10X improvement in --gtshark speed by moving to in-memory comms using fifo
+- --dump-one-local and --dump-one-b250 now output a file per VB
